--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/rjjgallagher/discord-bot/issues"
   },
-  "homepage": "https://github.com/rjjgallagher/discord-bot#readme"
+  "homepage": "https://github.com/rjjgallagher/discord-bot#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3"
+  }
 }
