--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/rjjgallagher/discord-bot#readme",
   "dependencies": {
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3",
-    "fs": "^0.0.1"
+    "dotenv": "^16.0.3"
   }
 }
